[gd_scene load_steps=2 format=3 uid="uid://interlude_screen"]

[ext_resource type="Script" path="res://src/ui/screens/interlude/interlude_screen.gd" id="1"]

[node name="InterludeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.12, 0.12, 0.18, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="GuestPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="GuestList" type="VBoxContainer" parent="MainContainer/GuestPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="ViewDeckButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "View Deck"

[node name="ContinueButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "Continue"

[node name="DeckPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -288.0
offset_right = 512.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DeckPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="DeckPopup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DeckTitle" type="Label" parent="DeckPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Your Deck"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="DeckPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeckGrid" type="HFlowContainer" parent="DeckPopup/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="CloseButton" type="Button" parent="DeckPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"
